---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "1 := "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(0)
    Module@(src/main.t:0..5): "<root>"@(dummy)
      StmtBody@(src/main.t:0..4): []
        Assign@(src/main.t:0..4)
          Literal@(src/main.t:0..1): Integer(1)
error at src/main.t:2..4: unexpected end of file
| error for src/main.t:2..4: expected expression after here
